added styles to reset password page

--- a/backend/src/templates/reset-password.hbs
+++ b/backend/src/templates/reset-password.hbs
@@ -2,11 +2,27 @@
 <html>
   <head>
     <title>Reset Password</title>
+    <style>
+
+     .link{
+       background-color: #22c55e;
+       color: white;
+       border-radius: 30px;
+       padding: 10px 20px;
+       text-decoration: none;
+       font-weight: 600;
+     }
+    </style>
   </head>
   <body>
     <p>Hi {{name}},</p>
-    <p>You requested a password reset. Click the link below to reset your password:</p>
-    <p><a href="{{url}}">Reset Password</a></p>
+    <p>	
+Trouble accessing your Spotify account?
+ No problem, we're here to help.
+  Select the button below to reset your password. 
+  The link is valid for 2 hours.</p>
+    <button class="link"><a href="{{url}}" >Reset Password</a></button>
+    <p>By resetting your password, you'll also confirm your email associated with the account.</p>
     <p>If you didn't request this, please ignore this email.</p>
   </body>
 </html>
